<resources>
    <string name="app_name">Colors</string>
    <string name="random">Random</string>
    <string name="text">text</string>
    <string name="input_hex_code">Input hex code</string>
    <string name="rgb">RGB:</string>
    <string name="hsl">HSL:</string>
    <string name="select_image">Select image</string>
    <string name="set_background">Set background</string>
    <string name="menu">menu</string>
    <string name="more">More</string>
</resources>
