<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:pikolo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <com.madrapps.pikolo.HSLColorPicker
        android:id="@+id/colorPicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="80dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/randomColorButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        pikolo:hue_arc_length="360"
        pikolo:hue_radius_offset="0dp"
        pikolo:hue_start_angle="0"
        pikolo:indicator_stroke_color="@android:color/white"
        pikolo:lightness_arc_length="150"
        pikolo:lightness_radius_offset="70dp"
        pikolo:lightness_start_angle="105"
        pikolo:saturation_arc_length="150"
        pikolo:saturation_radius_offset="70dp"
        pikolo:saturation_start_angle="285"
        pikolo:stroke_color="@android:color/black"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_circle"
        app:layout_constraintBottom_toBottomOf="@+id/colorPicker"
        app:layout_constraintEnd_toEndOf="@+id/colorPicker"
        app:layout_constraintStart_toStartOf="@+id/colorPicker"
        app:layout_constraintTop_toTopOf="@+id/colorPicker"
        android:contentDescription="@string/text" />

    <Button
        android:id="@+id/randomColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/colorTextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_hex_code"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/randomColorButton"
        app:layout_constraintTop_toBottomOf="@+id/colorPicker" />

    <TextView
        android:id="@+id/textViewRGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/rgb"
        app:layout_constraintBottom_toTopOf="@+id/textViewHSL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHSL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/hsl"
        app:layout_constraintBottom_toTopOf="@+id/colorPicker"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
